; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_dscc4.c_dscc4_tx_quiescent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_dscc4.c_dscc4_tx_quiescent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dscc4_dev_priv = type { i32, i64, i64 }
%struct.net_device = type { i32 }

@CH0FTDA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dscc4_dev_priv*, %struct.net_device*)* @dscc4_tx_quiescent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dscc4_tx_quiescent(%struct.dscc4_dev_priv* %0, %struct.net_device* %1) #0 {
  %3 = alloca %struct.dscc4_dev_priv*, align 8
  %4 = alloca %struct.net_device*, align 8
  store %struct.dscc4_dev_priv* %0, %struct.dscc4_dev_priv** %3, align 8
  store %struct.net_device* %1, %struct.net_device** %4, align 8
  %5 = load %struct.dscc4_dev_priv*, %struct.dscc4_dev_priv** %3, align 8
  %6 = getelementptr inbounds %struct.dscc4_dev_priv, %struct.dscc4_dev_priv* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @CH0FTDA, align 8
  %9 = add nsw i64 %7, %8
  %10 = load %struct.dscc4_dev_priv*, %struct.dscc4_dev_priv** %3, align 8
  %11 = getelementptr inbounds %struct.dscc4_dev_priv, %struct.dscc4_dev_priv* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = mul nsw i32 %12, 4
  %14 = sext i32 %13 to i64
  %15 = add nsw i64 %9, %14
  %16 = call i64 @readl(i64 %15)
  %17 = load %struct.dscc4_dev_priv*, %struct.dscc4_dev_priv** %3, align 8
  %18 = getelementptr inbounds %struct.dscc4_dev_priv, %struct.dscc4_dev_priv* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %16, %19
  %21 = zext i1 %20 to i32
  ret i32 %21
}

declare dso_local i64 @readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
